Actually refactored MSM code, added unit tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 2.8.12)
-# project name 
-project (FloppyBox)
+# project name
+project (BOOP_FROM_SNAPSHOTS)
 
 # Set debug build type for gdb flags
 set(CMAKE_BUILD_TYPE Debug)
@@ -8,19 +8,15 @@ set(CMAKE_BUILD_TYPE Debug)
 # Set the output folder where your program will be created
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
 set(CODE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
-set(CODE_GJK_DIR ${CMAKE_SOURCE_DIR}/src/gjk)
-set(CODE_SHAPE_DIR ${CMAKE_SOURCE_DIR}/src/gjk/shape)
 set(CODE_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
 # Include all external headers from the "include" directory
-include_directories(${CODE_INCLUDE_DIR} ${CODE_GJK_DIR} ${CODE_SHAPE_DIR})
+include_directories(${CODE_INCLUDE_DIR})
 
 # All sources files are from the "src" directory
-file(GLOB SOURCES ${CODE_SOURCE_DIR}/*.cpp )
-file(GLOB GJK_SOURCES ${CODE_GJK_DIR}/*.cpp )
-file(GLOB SHAPE_SOURCES ${CODE_SHAPE_DIR}/*.cpp )
+file(GLOB SOURCES ${CODE_SOURCE_DIR}/*.cpp ${CODE_SOURCE_DIR}/*.c)
 
 # Include the Voro++ header and set the library path
 include_directories(/usr/local/include/voro++)
@@ -33,12 +29,12 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_compile_options(-Wall -lm -O3 -g)
 
 # add the executable
-add_executable(fbmc ${SOURCES} ${GJK_SOURCES} ${SHAPE_SOURCES})
+add_executable(boop ${SOURCES})
 
 # link math library
-target_link_libraries(fbmc m)
+target_link_libraries(boop m)
 # link Voro++ library
-target_link_libraries(fbmc voro++)
+target_link_libraries(boop voro++)
 
 # Install
-install(TARGETS fbmc DESTINATION ${CMAKE_SOURCE_DIR})
+install(TARGETS boop DESTINATION ${CMAKE_SOURCE_DIR})
