Cleaned up CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,12 @@
 cmake_minimum_required (VERSION 2.8.12)
-# project name
-project (BOOP_FROM_SNAPSHOTS)
+project(BOOP_FROM_SNAPSHOTS)
 
 # Set debug build type for gdb flags
 set(CMAKE_BUILD_TYPE Debug)
 
-# Set the output folder where your program will be created
-set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
+# Set some folders
 set(CODE_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
-set(CODE_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
-set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
-
-# Include all external headers from the "include" directory
-include_directories(${CODE_INCLUDE_DIR})
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 
 # All sources files are from the "src" directory
 file(GLOB SOURCES ${CODE_SOURCE_DIR}/*.cpp ${CODE_SOURCE_DIR}/*.c)
@@ -28,12 +21,11 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 # Additional arguments
 add_compile_options(-Wall -lm -O3 -g)
 
-# add the executable
+# Set the executable name
 add_executable(boop ${SOURCES})
 
-# link math library
+# link math and Voro++ libraries
 target_link_libraries(boop m)
-# link Voro++ library
 target_link_libraries(boop voro++)
 
 # Install
